--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,8 @@ date: "9/1/2021"
 output: pdf_document
 ---
 
+# Welcome to my repository
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -28,3 +30,5 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
